# rasn

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  Makefile  README.md  RELEASE.md  SETUP_SUMMARY.md  bench_results.txt  docker-compose.yml  install.sh
.github/workflows/: ci.yml  docker.yml  release.yml
.windsurf/: cargo-workflow.md  quick-reference.md
crates/rasn-arrow/: Cargo.toml
crates/rasn-arrow/benches/: arrow_lookup.rs  lookup_bench.rs
crates/rasn-arrow/src/: lib.rs
crates/rasn-arrow/tests/: integration_test.rs
crates/rasn-cache/: Cargo.toml
crates/rasn-cache/src/: lib.rs
crates/rasn-cidr/: Cargo.toml
crates/rasn-cidr/src/: lib.rs
crates/rasn-cli/: Cargo.toml
crates/rasn-cli/src/: batch.rs  main.rs
crates/rasn-client/: Cargo.toml
crates/rasn-client/benches/: client_performance.rs
crates/rasn-client/src/: lib.rs
crates/rasn-core/: Cargo.toml
crates/rasn-core/src/: lib.rs  security.rs
crates/rasn-db/: Cargo.toml
crates/rasn-db/src/: lib.rs
crates/rasn-geoip/: Cargo.toml
crates/rasn-geoip/src/: lib.rs
crates/rasn-mcp/: Cargo.toml
crates/rasn-mcp/src/: lib.rs  transport.rs
crates/rasn-resolver/: Cargo.toml
crates/rasn-resolver/benches/: dns_resolution.rs
crates/rasn-resolver/src/: lib.rs
crates/rasn-whois/: Cargo.toml
crates/rasn-whois/src/: lib.rs
data/: .gitignore  README.md
data/arrow/: asn-metadata.parquet  country-index.parquet  ip2asn-v6.parquet
docs/: 00-INDEX.md  01-PRD.md  02-TRD.md  03-ALGORITHMS.md  04-SIMD-OPTIMIZATIONS.md  05-NETWORK-OPTIMIZATIONS.md  06-MEMORY-OPTIMIZATIONS.md  07-MCP-DESIGN.md  08-MCP-TOOLS.md  09-API-CONTRACTS.md  10-DATA-SOURCES.md  11-ROADMAP.md  12-PROJECT-STRUCTURE.md  13-COLUMNAR-STORAGE.md  DOCKER.md
examples/: README.md  basic_lookup.rs  cidr_operations.rs  mcp_server.rs
hooks/: README.md  pre-commit
reference_data/: .gitignore  README.md  update.sh
rules/: development.md
scripts/: .gitignore  README.md  build_databases.py  check.sh  install-hooks.sh  pre-commit-check.sh  recon_reference_data.py  requirements.txt
