[package]
name = "rasn-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Multi-level LRU cache for ASN data"

[dependencies]
rasn-core = { path = "../rasn-core" }
lru = "0.12"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio-test = "0.4"
