[package]
name = "rasn-cidr"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CIDR operations and IP range queries"

[dependencies]
rasn-core = { path = "../rasn-core" }
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
