[package]
name = "rasn-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for RASN"

[[bin]]
name = "rasn"
path = "src/main.rs"

[dependencies]
rasn-core = { path = "../rasn-core" }
rasn-arrow = { path = "../rasn-arrow" }
rasn-resolver = { path = "../rasn-resolver" }
rasn-client = { path = "../rasn-client" }
rasn-mcp = { path = "../rasn-mcp" }
clap = { version = "4.5", features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
colored = "2.1"
csv = "1.3"
rayon = "1.10"
tokio.workspace = true
anyhow.workspace = true
num_cpus = "1.16"
