[package]
name = "rasn-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP client for external ASN APIs"

[dependencies]
rasn-core = { path = "../rasn-core" }
reqwest = { version = "0.12", features = ["json"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bench]]
name = "client_performance"
harness = false
