[package]
name = "rasn-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "RocksDB cold storage for overflow ASN data"

[dependencies]
rasn-core = { path = "../rasn-core" }
rocksdb = { version = "0.22", default-features = false, features = ["lz4", "snappy"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3.8"
