[package]
name = "rasn-geoip"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "GeoIP location enrichment for IP addresses"

[dependencies]
rasn-core = { path = "../rasn-core" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
