[package]
name = "rasn-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Model Context Protocol JSON-RPC 2.0 server"

[dependencies]
rasn-core = { path = "../rasn-core" }
rasn-arrow = { path = "../rasn-arrow" }
rasn-cache = { path = "../rasn-cache" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
thiserror.workspace = true
async-trait = "0.1"

[dev-dependencies]
