[package]
name = "rasn-whois"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WHOIS client for ASN enrichment"

[dependencies]
rasn-core = { path = "../rasn-core" }
tokio.workspace = true
thiserror.workspace = true
serde.workspace = true

[dev-dependencies]
